Reduce the chance of races between log messages / Use array-backed data structure if possible